--- a/jyut6ping3.dict.yaml
+++ b/jyut6ping3.dict.yaml
@@ -14,6 +14,6 @@ import_tables:
   - jyut6ping3.chars
   - jyut6ping3.words
   - jyut6ping3.phrase
-  - jyut6ping3.lettered
+  #- jyut6ping3.lettered
   - jyut6ping3.maps
 ...
